[workspace]
members = [
    "canister_logger",
    "canister_state_macros",
    "canister_time",
    "canister_tracing_macros",
    "serializer",
    "stable_memory",
    "timer_jobs",
]

[workspace.dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic0 = "0.18.7"
proc-macro2 = "1.0.50"
quote = "1.0.23"
rmp-serde = "1.1.1"
serde = "1.0.152"
syn = "1.0.107"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"

