[workspace]
members = [
    "canister_logger",
    "canister_state_macros",
    "canister_time",
    "canister_timer_jobs",
    "canister_tracing_macros",
    "serializer",
    "stable_memory",
]

[workspace.dependencies]
candid = "0.8.4"
ic-cdk = "0.7.3"
ic-cdk-timers = "0.1.2"
ic0 = "0.18.9"
proc-macro2 = "1.0.51"
quote = "1.0.23"
rmp-serde = "1.1.1"
serde = "1.0.152"
syn = "1.0.109"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"

