[workspace]
members = [
    "canister_logger",
    "canister_state_macros",
    "canister_time",
    "canister_timer_jobs",
    "canister_tracing_macros",
    "serializer",
    "stable_memory",
]

[workspace.dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-timers = "0.2.0"
ic0 = "0.18.10"
proc-macro2 = "1.0.60"
quote = "1.0.28"
rmp-serde = "1.1.1"
serde = "1.0.164"
syn = "2.0.18"
tracing = "0.1.37"
tracing-attributes = "0.1.24"
tracing-subscriber = "0.3.17"
