[package]
name = "canister_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
canister_time = { path = "../canister_time" }
ic0 = "0.18.7"
serde = "1.0.152"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
